--- a/src/modules/tasks/templates/task_details_modal/modal.css
+++ b/src/modules/tasks/templates/task_details_modal/modal.css
@@ -12,7 +12,7 @@
 
 .modal-content {
   display: grid;
-  margin: 100px auto;
+  margin: 200px auto;
   padding: 30px;
   width: 70%;
   background-color: #dc968c;
