--- a/src/style.css
+++ b/src/style.css
@@ -1,166 +1,190 @@
 body {
-    color: black;
-    /* background-color: rgb(231, 236, 240); */
-    background: linear-gradient(0deg, rgba(78,79,85,1) 0%, rgba(171,171,171,1) 34%, rgba(185,185,185,1) 56%, rgba(196,196,196,1) 76%, rgba(249,248,246,1) 100%);
-    margin-bottom: 16vh;
+  color: black;
+  /* background-color: rgb(231, 236, 240); */
+  background: linear-gradient(
+    0deg,
+    rgba(78, 79, 85, 1) 0%,
+    rgba(171, 171, 171, 1) 34%,
+    rgba(185, 185, 185, 1) 56%,
+    rgba(196, 196, 196, 1) 76%,
+    rgba(249, 248, 246, 1) 100%
+  );
+  margin-bottom: 16vh;
 }
 
-.content{
-    width: 80%;
-    min-height: 60vh;
-    background-color: rgb(230, 230, 230);
-    border: 5px outset rgb(199, 199, 199);
-    opacity: 0.7;
-    margin: auto;
-    margin-top: 30px;
+.content {
+  width: 80%;
+  min-height: 60vh;
+  background-color: rgb(230, 230, 230);
+  border: 5px outset rgb(199, 199, 199);
+  opacity: 0.7;
+  margin: auto;
+  margin-top: 30px;
 }
 
-.back-home{
-    background-image: url("./assets/img/list2.jpg");
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    text-align: center;
-    opacity: 0.8;
+.back-home {
+  background-image: url('./assets/img/list2.jpg');
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  text-align: center;
+  opacity: 0.8;
 }
 
-      
 .text-home {
-    position: relative;
-    color: rgb(190, 190, 190);
+  position: relative;
+  color: rgb(190, 190, 190);
 }
-
 
 .text-home-2 {
-    text-align: center;
-    position: absolute;
-    top: 30%;
-    width: 100%;
-    opacity: 0.9;
-    transform: translate(0%, -50%);
-    background: linear-gradient(90deg, rgba(217,217,217,1) 0%, rgba(68,68,68,1) 19%, rgba(27,27,27,0.8127626050420168) 50%, rgba(68,68,68,1) 79%, rgba(217,217,217,1) 100%);
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  opacity: 0.9;
+  transform: translate(0%, -50%);
+  background: linear-gradient(
+    90deg,
+    rgba(217, 217, 217, 1) 0%,
+    rgba(68, 68, 68, 1) 19%,
+    rgba(27, 27, 27, 0.8127626050420168) 50%,
+    rgba(68, 68, 68, 1) 79%,
+    rgba(217, 217, 217, 1) 100%
+  );
 }
 
-.text-home >h1 {
-    font-size:50px;
+.text-home > h1 {
+  font-size: 50px;
 }
 
 .footer {
-    background-color: #4e4f55;
-    height: 6vh;
-    width: 100vw;
-    bottom: 0;
-    text-align: center;
-    font-family: sans-serif;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-  }
-  
-  .footer-authors {
-    height:100%;
-    display: grid;
-    color: rgb(197, 197, 197);
-    gap: 0.5%;
-    grid-template-columns: 10% 10% 10% 10% 35% 20%;
-    justify-content: center;
-    align-content: center;
-    font-size: 1rem;
-  }
-
-.icon-foot {
-    text-align: right;
-    padding-right: 15px;
-    cursor: pointer;
+  background-color: #4e4f55;
+  height: 6vh;
+  width: 100vw;
+  bottom: 0;
+  text-align: center;
+  font-family: sans-serif;
+  position: fixed;
+  left: 0;
+  bottom: 0;
 }
 
+.footer-authors {
+  height: 100%;
+  display: grid;
+  color: rgb(197, 197, 197);
+  gap: 0.5%;
+  grid-template-columns: 10% 10% 10% 10% 35% 20%;
+  justify-content: center;
+  align-content: center;
+  font-size: 1rem;
+}
+
+.icon-foot {
+  text-align: right;
+  padding-right: 15px;
+  cursor: pointer;
+}
 
 .icon-foot > img {
-    height: 30px; 
-    width: 30px; 
+  height: 30px;
+  width: 30px;
 }
 
 .icon-foot > img:hover {
-    height: 28px; 
-    width: 28px; 
+  height: 28px;
+  width: 28px;
 }
 
 #fa-user-nav {
-    font-size: 20px;
+  font-size: 20px;
 }
 
-.description{
-    grid-template-columns: auto auto auto;
-    display: grid;
-    gap: 3%;
-    margin: 2% 8%;
-    text-align: center;
+.description {
+  grid-template-columns: auto auto auto;
+  display: grid;
+  gap: 3%;
+  margin: 2% 8%;
+  text-align: center;
 }
 
 .desc-item {
-    /* background-color: rgb(170, 183, 194);
+  /* background-color: rgb(170, 183, 194);
      */
-    border: 3px outset rgb(150, 165, 177);
-    background: linear-gradient(0deg, rgba(147,147,147,1) 1%, rgba(171,171,171,1) 23%, rgba(185,185,185,1) 46%, rgba(196,196,196,1) 68%, rgba(249,248,246,1) 100%);
-    opacity: 0.9;
+  border: 3px outset rgb(150, 165, 177);
+  background: linear-gradient(
+    0deg,
+    rgba(147, 147, 147, 1) 1%,
+    rgba(171, 171, 171, 1) 23%,
+    rgba(185, 185, 185, 1) 46%,
+    rgba(196, 196, 196, 1) 68%,
+    rgba(249, 248, 246, 1) 100%
+  );
+  opacity: 0.9;
 }
 
 .desc-item > img {
-    height: 75%; 
-    width: 50%;
+  height: 75%;
+  width: 50%;
 }
 
 /* navvvvvvvvv */
-#login-text, #register-text {
-    border: 1.2px solid rgb(192, 192, 192);
-    padding: 8px;
-    border-radius: 10%;
+.navbar {
+  z-index: 100;
 }
 
-#login-text:hover, #register-text:hover {
-    border: 1.2px solid rgb(218, 218, 218);
-    background-color: #414141;
-    padding: 8px;
+#login-text,
+#register-text {
+  border: 1.2px solid rgb(192, 192, 192);
+  padding: 8px;
+  border-radius: 10%;
 }
 
-@media screen and (max-width: 1000px) {  
-    .text-home-2 {
-        top: 45%;
-    }
-
-    .text-home >h1 {
-        font-size: 23px;
-    }
-
-    .text-home >h3{
-        font-size: 17px;
-    }
-
-    .back-home{
-        height: 470px;
-    }
+#login-text:hover,
+#register-text:hover {
+  border: 1.2px solid rgb(218, 218, 218);
+  background-color: #414141;
+  padding: 8px;
 }
 
-@media screen and (max-width: 800px) {  
-    .description {
-      grid-template-columns: auto;
-      gap: 5%;
-    }
+@media screen and (max-width: 1000px) {
+  .text-home-2 {
+    top: 45%;
+  }
+
+  .text-home > h1 {
+    font-size: 23px;
+  }
+
+  .text-home > h3 {
+    font-size: 17px;
+  }
+
+  .back-home {
+    height: 470px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .description {
+    grid-template-columns: auto;
+    gap: 5%;
+  }
 }
 
 /***** MEDIA QUERIES *****/
-@media screen and (max-width: 500px) {  
-    .footer-authors {
-      grid-template-columns: 100%;
-      grid-template-columns: auto auto auto auto auto;
-      justify-content: center;
-      align-content: center;
-    }
-  
-    .author {
-      border: none;
-      font-size: 9px;
-    }
+@media screen and (max-width: 500px) {
+  .footer-authors {
+    grid-template-columns: 100%;
+    grid-template-columns: auto auto auto auto auto;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .author {
+    border: none;
+    font-size: 9px;
+  }
 }
